# kayak_python

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .php-cs-fixer.dist.php  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DNS.CHANGEOVER-fastpath.md  DNS.CHANGEOVER.md  LICENSE-DATA  Makefile  README.md  alembic.ini  biome.json  composer.json  opus.review.md  package-lock.json  package.json  phpstan-baseline.neon  phpstan.neon  phpunit.xml  playwright.config.ts  pyproject.toml
.github/: dependabot.yml
alembic/: env.py
conf/: levels.nginx  mime-extras.conf  security-headers-hcaptcha.conf  security-headers-turnstile.conf  security-headers.conf
data/: aw_reaches.json  builder.yaml  descriptions.yaml  dreamflows_cache.json  sources.old.yaml  sources.yaml
deploy/: INSTALL-paired-release.md  SETUP.md  deploy.env.example  install-config.sh  install-secrets.sh  kayak-deploy.sh  kayak-env.example  kayak-fpm-pool.conf  kayak-install-runtime-config.sh  kayak-log-format.conf  kayak-pipeline-deploy-mode.conf  kayak-pipeline.sudoers  levels  logrotate-kayak-csp  migrate-secrets.sh  msmtprc.example  nftables.conf  nginx-default-server  nginx-editor-env.conf  nginx-kayak-log-format.conf  nginx-ratelimit.conf  nginx.conf  php-fpm-secrets-dropin.conf  ratelimit.conf  secrets.env.example
docs/: HANDOFF_PLAN.md  PLAN_4c_renderers.md  PLAN_add_gauges_reaches.md  PLAN_b5_init_dataset.md  PLAN_build_split.md  PLAN_c901_cleanup.md  PLAN_dataset_separation.md  PLAN_dev_env_followups.md  PLAN_dual_axis_plot.md  PLAN_editor_pr_bridge.md  PLAN_editor_security_review.md  PLAN_huc_assignment.md  PLAN_js_cleanup.md  PLAN_js_cleanup_phase3.md  PLAN_js_smoke_tests.md  PLAN_logs_analyze_migration.md  PLAN_metadata_single_source.md  PLAN_montana_gauges.md  PLAN_orphan_sources.md  PLAN_outstanding_followups.md  PLAN_pacificorp_rogue.md  PLAN_php_layer_split.md  PLAN_php_testing.md  PLAN_phpstan_level9_strict.md  PLAN_plot_hover_tooltip.md  PLAN_pre_release_followup.md  PLAN_production_discipline.md  PLAN_three_instance_layout.md  PLAN_tier3_closeout.md  PLAN_typed_config_spine.md  PLAN_wa_kalama_coweeman_toutle_tilton.md  REVIEW_gradient_profile.md  REVIEW_round5_2026-05-29.md  database-schema.md  db_sync.md  dev-env-followups.md  fk_cleanup.md  live-tree-workflow.md  migrations.md  new-region-runbook.md  (+9 more)
files/: Makefile.build.12395  Makefile.fetch  Makefile.fetch.22193  a.db  constraint.URL  corrections.keys  hash.db  hash.db.old  levels.head  levels.tail  map.db
gen.sql/: README  dick.data  mkBuilder  mkDescription  mkEdit  mkFlows  mkMaster  mkMaster.bak  mkParameters  mkURLs  mkURLs.gawk  rebuild  setup  setup.1  setup.2  tkw.tkw  tpw.tkw  tpw.tkw1  tpw.tpw
hardening/: 50-unattended-upgrades-local  90-hardening.conf  install.sh  jail.local  msmtp-aliases  nginx-default-block.conf  nginx-malicious.conf  sshd-hardening.conf
montana/: mt.list
php/: CONVENTIONS.md  about.php  account.php  admin.php  api.php  auth.php  comment.php  contact.php  csp-report.php  custom.php  custom_gauges.php  data.php  description.php  disclaimer.php  edit.php  gauge.php  gauge_picker.php  latest.php  login.php  picker.php  plot.php  privacy.php  propose.php  reach.php  review.php  show-config.php  source.php  source_data.php  source_plot.php  status.php  style.css  view.php
project-review-5/: IMPL_round5.md  PLAN_round5_remediation.md
project-review-6/: PLAN_round6_remediation.md  REVIEW_round6_2026-05-30.md
public_html/: .htaccess  404.html  _internal  about.php  account.php  admin.php  api.php  auth.php  comment.php  contact.php  csp-report.php  custom.php  custom_gauges.php  data.php  description.php  disclaimer.php  edit.php  gauge.php  gauge_picker.php  includes  latest.php  login.php  logout.php  no_show_review.js  picker.php  plot.php  privacy.php  propose.php  reach.php  review.php  robots.txt  source.php  status.php  view.php
scripts/: Makefile  _gauge_metadata_cache.py  apply-audit-timer-biweekly.sh  audit-t30.sh  audit_gauges.py  backfill_reach_river.py  check-cert-expiry.sh  check-config-drift.sh  check-db-push-trap.sh  check-php-coverage.sh  check-php-helper-prefix.sh  check-phpstan-level.sh  chomp.urls  compute_reach_gradient.py  db_pull.sh  db_push.sh  deploy.sh  dump_and_import.sh  emit_max_gradient_migration.py  export_metadata.py  extract_nhd_flowlines.sh  extract_osm_waterways.sh  extract_trace_data.sh  extract_wbd.sh  fetch_aw_geom.py  fetch_dem_tiles.py  fetch_nhd.sh  fetch_nwps_sites.py  fetch_usbr_pn_sites.py  fetch_usbr_rise_sites.py  fetch_usgs_sites.py  fix_sort_names.py  gen_migration_manifest.py  generate_mt_migration.py  harvest_wa_ecology.py  health-check.sh  import_aw_usgs_reaches.py  import_dreamflows.py  import_from_dump.py  import_metadata.py  (+28 more)
src/: Axis.C  Axis.H  BitMapCanvas.C  BitMapCanvas.H  Builder.C  Builder.H  CGI.C  CGI.H  CMD.H  CMD.badHash.C  CMD.description.C  CMD.edit.C  CMD.file.C  CMD.loadMaster.C  CMD.page.C  CMD.plot.C  CMD.view.C  Canvas.C  Canvas.C.orig  Canvas.H  CompressString.C  CompressString.H  Convert.C  Convert.H  Curl.C  Curl.H  DataDB.C  DataDB.H  Description.C  Description.H  Directory.C  Directory.H  Display.C  Display.H  Env.C  Env.H  File.C  File.H  GIF.C  GIF.H  (+137 more)
static/: feature-map.js  gauge_picker.js  gradient-profile.js  internal-sort.js  leaflet.css  leaflet.js  levels.js  manifest.json  map.js  picker.js  plot-hover.js  reach-map.js  reaches.geojson  robots.txt  scroll-indicator.js  search-map.js  security.txt  sw.js
systemd/: install.service.sh  kayak-audit-gauges.service  kayak-audit-gauges.timer  kayak-backup-hourly.service  kayak-backup-hourly.sh  kayak-backup-hourly.timer  kayak-backup-offsite.service  kayak-backup-offsite.sh  kayak-backup-weekly.service  kayak-backup-weekly.sh  kayak-backup-weekly.timer  kayak-backup.service  kayak-backup.sh  kayak-backup.timer  kayak-cert-expiry.service  kayak-cert-expiry.timer  kayak-cert-renewal-test.service  kayak-cert-renewal-test.timer  kayak-config-drift.service  kayak-config-drift.timer  kayak-decimate.service  kayak-decimate.timer  kayak-fail-test.service  (+26 more)
(+800 files in other folders)
