[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kayak"
version = "0.1.0"
description = "River level data aggregation from government agencies"
requires-python = ">=3.13"
dependencies = [
    "SQLAlchemy>=2.0",
    "requests>=2.33",    # CVE-2026-25645 fixed in 2.33.0
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "aiohttp>=3.13.4",   # CVE-2026-34513..34525 (10 CVEs) fixed in 3.13.4
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",     # CVE-2025-71176 fixed in 9.0.3
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
    "lxml-stubs>=0.5",
]
geo = [
    "shapely>=2",
    "geopandas>=1",
    "pyogrio>=0.10",
]

[project.scripts]
levels = "kayak.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kayak"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Skip slow tests by default. CI overrides with ``--override-ini='addopts='``
# (see .github/workflows/ci.yml) so the integration test still runs there.
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: marks tests as slow (run with '-m slow' or '--override-ini=addopts=')",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["kayak"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "C901"]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["kayak"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# Tracing module is a wholesale move of a standalone script that pre-dates
# the strict-typing regime; typing it gradually rather than front-loading
# 19+ annotations in a refactor commit.
module = "kayak.tracing.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
# Third-party geospatial/plotting libs ship no stubs.
module = ["osgeo.*", "matplotlib.*", "contextily.*", "geopandas.*", "shapely.*", "pyogrio.*"]
ignore_missing_imports = true

[tool.hatch.envs.default]
features = ["dev"]
