[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kayak"
version = "1.2.0"
description = "River level data aggregation from government agencies"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "SQLAlchemy>=2.0",
    "requests>=2.33",    # CVE-2026-25645 fixed in 2.33.0
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "aiohttp>=3.13.4",   # CVE-2026-34513..34525 (10 CVEs) fixed in 3.13.4
    "pydantic[email]>=2.7,<3",       # T3.3 typed config — 2.7 is first 3.13-supporting release; [email] pulls email-validator for EmailStr
    "pydantic-settings>=2.4,<3",      # T3.3 typed config — env-driven BaseSettings; 2.4 ships 3.13 wheels
    "markdown>=3.5",                  # Renders DATASET_DIR/regression/*.md → /static/regression/*.html at build time; pure-Python, no transitive deps
    "nh3>=0.2",                       # HTML sanitizer (Rust/ammonia) — allowlists the rendered regression HTML (S2); ships cp313 wheels
    "defusedxml>=0.7",               # XXE-safe XML/SVG parsing — validates regression SVG against a strict allowlist before serving (S2)
    "maxminddb>=2.5",                 # GeoIP country lookup for the status page; reads DB-IP Lite mmdb lazily downloaded to var/geoip/
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",     # CVE-2025-71176 fixed in 9.0.3
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
    "lxml-stubs>=0.5",
    "hypothesis>=6.150",  # Property-based testing for parsers (T2.2)
    "numpy>=2.1",         # scripts/regression/gauge_pair_linear.py + its test; was only transitive via [geo]
    "httpx>=0.27",        # scripts/refresh_reach_elevations.py (async EPQS elevation fetch) — was an undeclared import
]
geo = [
    "shapely>=2",
    "geopandas>=1",
    "pyogrio>=0.10",
    "rasterio>=1.3",
]

[project.scripts]
levels = "kayak.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kayak"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Skip slow tests by default. CI overrides with ``--override-ini='addopts='``
# (see .github/workflows/ci.yml) so the integration test still runs there.
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: marks tests as slow (run with '-m slow' or '--override-ini=addopts=')",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["kayak"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "C901"]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.per-file-ignores]
# Archived run-once scripts: linted like the rest of the tree, but exempt from
# the C901 complexity bar — refactoring frozen one-shot code for a
# maintainability standard it'll never need is unwarranted (the package itself
# noqa's its few irreducible cases; see docs/done/PLAN_c901_cleanup.md).
"docs/one-offs/*" = ["C901"]

[tool.ruff.lint.isort]
known-first-party = ["kayak"]

[tool.mypy]
python_version = "3.13"
# Let the scripts gated by mypy (import_metadata / refresh_reach_elevations)
# resolve `kayak.*` from source. CI pip-installs kayak editable so it doesn't
# need this; the pre-commit mypy hook runs isolated (no install) and does.
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# trace.py is a wholesale move of a standalone script that pre-dates the
# strict-typing regime; typing it gradually rather than front-loading 19+
# annotations in a refactor commit. Narrowed from kayak.tracing.* so the
# typed, tested format.py / constants.py stay under the strict gate.
module = "kayak.tracing.trace"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
# gauge_audit is a wholesale move of the former scripts/audit_gauges.py closure
# (audit logic + two site-cache fetchers) that pre-dates the strict-typing
# regime; typing it gradually rather than front-loading the annotations in the
# move commit (same precedent as kayak.tracing.trace above). The thin CLI
# wrapper kayak.cli.audit_gauges stays under the strict gate.
module = ["kayak.gauge_audit.audit", "kayak.gauge_audit.usgs_sites", "kayak.gauge_audit.nwps_sites"]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
# Third-party geospatial/plotting libs ship no stubs.
module = ["osgeo.*", "matplotlib.*", "contextily.*", "geopandas.*", "shapely.*", "pyogrio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Python-Markdown ships no type stubs (PyPI: types-Markdown lives at a
# stale 3.7 — current `markdown` package has no inline annotations).
module = "markdown.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# maxminddb (DB-IP / MaxMind mmdb reader) ships no inline type stubs.
module = "maxminddb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# defusedxml ships no inline type stubs (types-defusedxml is a separate,
# lagging package); the SVG validator (kayak.web.regression) only uses its
# fromstring + exception types, which we wrap immediately.
module = "defusedxml.*"
ignore_missing_imports = true

[tool.hatch.envs.default]
features = ["dev"]
